--- a/cf/i18n/resources/zh/cf/api/zh_CN.all.json
+++ b/cf/i18n/resources/zh/cf/api/zh_CN.all.json
@@ -61,7 +61,7 @@
    },
    {
       "id": "Failed to create json for resource_match request",
-      "translation": "无法创建resource_match请求的JSON文件"
+      "translation": "无法创建JSON格式的resource_match请求"
    },
    {
       "id": "Failed to marshal JSON",
@@ -69,7 +69,7 @@
    },
    {
       "id": "Failed to start oauth request",
-      "translation": "无法启动开放授权请求"
+      "translation": "无法启动oauth请求"
    },
    {
       "id": "Invalid Role {{.Role}}",
