--- a/cf/i18n/resources/zh/cf/commands/application/zh_CN.all.json
+++ b/cf/i18n/resources/zh/cf/commands/application/zh_CN.all.json
@@ -385,7 +385,7 @@
    },
    {
       "id": "Stack to use (a stack is a pre-built file system, including an operating system, that can run apps)",
-      "translation": "堆栈使用（堆栈是一个预先构建的文件系统，包括一个操作系统，可以运行的应用程序）"
+      "translation": "堆栈使用（堆栈是一个预先构建的文件系统，包括一个操作系统，可以用来运行应用程序）"
    },
    {
       "id": "Start an app",
@@ -437,7 +437,7 @@
    },
    {
       "id": "This will cause the app to restart. Are you sure you want to scale {{.AppName}}?",
-      "translation": "这将导致应用程序重新启动。您确定要缩放{{.AppName}}？"
+      "translation": "这将导致应用程序重新启动。您确定要伸缩{{.AppName}}？"
    },
    {
       "id": "Updating app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
@@ -469,7 +469,7 @@
    },
    {
       "id": "Warning: error tailing logs",
-      "translation": "警告: 错误日志拖尾"
+      "translation": "警告: 获取日志出错"
    },
    {
       "id": "actor",
@@ -565,11 +565,11 @@
    },
    {
       "id": "{{.DiskUsage}} of {{.DiskQuota}}",
-      "translation": "{{.DiskUsage}}的{{.DiskQuota}}"
+      "translation": "{{.DiskQuota}}中的{{.DiskUsage}}"
    },
    {
       "id": "{{.DownCount}} down",
-      "translation": "{{.DownCount}}向下号"
+      "translation": "{{.DownCount}}停止运行"
    },
    {
       "id": "{{.Err}}\n\nTIP: use '{{.Command}}' for more information",
@@ -577,19 +577,19 @@
    },
    {
       "id": "{{.FlappingCount}} failing",
-      "translation": "{{.FlappingCount}} 失败号"
+      "translation": "{{.FlappingCount}} 失败"
    },
    {
       "id": "{{.MemUsage}} of {{.MemQuota}}",
-      "translation": "{{.MemUsage}}的{{.MemQuota}}"
+      "translation": "{{.MemQuota}}中的{{.MemUsage}}"
    },
    {
       "id": "{{.RunningCount}} of {{.TotalCount}} instances running",
-      "translation": "{{.RunningCount}}的{{.TotalCount}}号正在运行的实例"
+      "translation": "{{.TotalCount}}中的{{.RunningCount}}个实例正在运行"
    },
    {
       "id": "{{.StartingCount}} starting",
-      "translation": "{{.StartingCount}}号正在启动"
+      "translation": "{{.StartingCount}}正在启动"
    },
    {
       "id": "{{.Usage}} {{.FormattedMemory}} x {{.InstanceCount}} instances",
